--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -169,7 +169,6 @@ body {
         color: #ca9b5f;
         opacity: 0.6;
         z-index: -1;
-
     }
 }
 
@@ -274,6 +273,32 @@ body {
     font-weight: 300;
     user-select: none;
     padding: 0 1em;
+}
+.loading-page{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box{
+    width: 50%;
+    height: 60%;
+    border: 1px solid $orange-colour;
+}
+
+.loading-title{
+    color: $orange-colour;
+    text-transform: uppercase;
+    font-size: 3.5em;    
+    text-align: center;
+    user-select: none;
+}
+.loading-text{
+    color: white;
+    font-size: 1.5em;
+    text-align: center;
+    user-select: none;
 }
 
 .arrow {
