--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -157,7 +157,6 @@ body {
     font-weight: 95;
     line-height: 1.9rem;
     letter-spacing: 1px;
-    user-select: none;
 
     &::first-letter {
         text-transform: uppercase;
@@ -285,43 +284,7 @@ body {
     user-select: none;
     padding: 0 1em;
 }
-.loading-page{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.box{
-    width: 50%;
-    height: 60%;
-}
 
-.loading-title{
-    color: $orange-colour;
-    text-transform: uppercase;
-    font-size: 3.5em;    
-    text-align: center;
-    user-select: none;
-}
-.loading-image{
-    width: 30%;
-    margin: 7% auto 0 auto;
-    fill:#ffffff;
-}
-.loading-text, .loading-about {
-    color: white;
-    font-size: 1.2em;
-    text-align: center;
-    user-select: none;
-    padding: .5em 0 1.5em 0;
-}
-
-.loading-about {
-    font-size: 1.5em;
-    padding-top: 1.5em;
-    border-top: solid 1px #ffffff77;
-}
 
 .galaxy {
     @keyframes spin {
@@ -378,40 +341,54 @@ body {
         transform: scaleX(1);
     }
 }
- 
-@media only screen  and (max-width:375px) and (max-height: 667px){
-    .star-sign-symbol {   
-        width: 50%;
-        margin: 20% auto 0 auto;    
-    }
-    .star-sign-name {
-        padding: 1.5em 0;
-    }
-    .star-sign{
-        font-size: 1.3rem; 
-        padding: 0 1em;
-    }  
-    .arrow { 
-        width: 2rem;
-        max-height: 5.5rem;
-    }
-    .horoscope-of-day{
-        width: 90%;
-        font-size: 1rem;
-        line-height: 1.3rem;
-        letter-spacing: 1px;
-    
-        &:before{
-            top: 0.25em;
-            left: 0.10em;
-            font-size: 5.7em;          
-        }
-    }
+
+.loading-page{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-@media only screen and (max-width:415px) and (max-height: 812px){
+.box{
+    width: 50%;
+    height: 60%;
+}
+
+.loading-title{
+    color: $orange-colour;
+    text-transform: uppercase;
+    font-size: 3.5em;    
+    text-align: center;
+    user-select: none;
+}
+.loading-image{
+    width: 30%;
+    margin: 7% auto 0 auto;
+    fill:#ffffff;
+}
+.loading-text, .loading-about {
+    color: white;
+    font-size: 1.2em;
+    text-align: center;
+    user-select: none;
+    padding: .5em 0 1.5em 0;
+}
+
+.loading-about {
+    font-size: 1.5em;
+    padding-top: 1.5em;
+    border-top: solid 1px #ffffff77;
+}
+
+
+                    ////////// Media queries ///////////
+ 
+
+@media only screen and (max-width:414px) and (max-height: 812px) and (min-height:668px){
+
     .star-sign-symbol {   
-        width: 30%;
-        margin: 20% auto 0 auto;    
+        width: 25%;
+        margin: 40% auto 0 auto;    
     }
     .star-sign-name {
         padding: 1.6em 0;
@@ -426,8 +403,8 @@ body {
     }
     .horoscope-of-day{
         width: 85%;
-        font-size: 0.9rem;
-        line-height: 1.3rem;
+        font-size: 1rem;
+        line-height: 1.6rem;
 
         &:before{
             top: 0.25em;
@@ -435,8 +412,22 @@ body {
             font-size: 5.7em;          
         }
     }
+
+             //////// LOAD COMPONENTS //////
+    
+    .loading-title{
+        font-size:2.2em;
+    }
+    .loading-text{
+        font-size:1em;
+    }
+    .loading-about{
+        font-size: 1em;
+    }
 }
+
 @media only screen and (max-width:1024px) and (min-width: 768px) and (max-height:1370px) and (min-height: 1000px){
+  
     .star-sign-symbol {   
         width: 20%;
         margin: 10% auto 0 auto;    
@@ -454,7 +445,133 @@ body {
     }
     .horoscope-of-day{
         width: 75%;
-        font-size: 1.3rem;
+        font-size: 1.6rem;
+        line-height: 1.9rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
+        }
+    }
+}
+@media only screen and (max-width: 414px) and (max-height: 736px){
+    .container{
+        overflow: hidden;
+    }
+    .star-sign-symbol {   
+        width: 30%;
+        margin: 40% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 1.0em 0;
+    }
+    .star-sign{
+        font-size: 1rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 1.7rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1rem;
+        line-height: 1.5rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
+        }
+    }
+}
+
+    @media only screen and (max-width:790px)  and (max-height: 769px){
+    
+    .star-sign-symbol {   
+        width: 20%;
+        margin: 20% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 2.0em 0;
+    }
+    .star-sign{
+        font-size: 1.7rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 2.5rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1.4rem;
+        line-height: 2rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
+        }
+    }
+}
+@media only screen and (max-width: 360px) and (max-height: 640px){
+    .container{
+        overflow: hidden;
+    }
+    .star-sign-symbol {   
+        width: 18%;
+        margin: 40% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 1.0em 0;
+    }
+    .star-sign{
+        font-size: 1.2rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 2.2rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1rem;
+        line-height: 1.6rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
+        }
+    }
+}
+            ////// LANDSCAPE MODE /////////
+
+@media only screen and (max-width: 812px) and (max-height: 375px){
+    
+    .container{
+        overflow: hidden;
+    }
+    .star-sign-symbol {   
+        width: 13%;
+        margin: 30% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 1.0em 0;
+    }
+    .star-sign{
+        font-size: 1.9rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 2.8rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1.2rem;
         line-height: 1.8rem;
 
         &:before{
@@ -463,39 +580,140 @@ body {
             font-size: 5.7em;          
         }
     }
-    .space-ray {
-        $width: 125vw;
-        $height: 15em;
-    
-        border-top: $white-borders;
-        border-bottom: $orange-borders;
-        height: $height;
-        width: $width;
-        position: absolute;
-        box-sizing: border-box;
-    
-        &.tl {
-            left: $width / -2;
-            top: $height / -2;
-            transform: rotate(-45deg);
+}
+@media only screen and (max-width: 640px) and (max-height: 360px){
+    .container{
+        overflow: hidden;
+    }
+    .star-sign-symbol {   
+        width: 12%;
+        margin: 40% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 1.0em 0;
+    }
+    .star-sign{
+        font-size: 1.2rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 2.5rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1.1rem;
+        line-height: 1.6rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
         }
-    
-        &.tr {
-            right: $width / -2;
-            top: $height / -2;
-            transform: rotate(45deg);
+    }
+}
+@media only screen and (max-width: 667px) and (max-height: 375px){
+    .container{
+        overflow: hidden;
+    }
+    .star-sign-symbol {   
+        width: 12%;
+        margin: 40% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 1.0em 0;
+    }
+    .star-sign{
+        font-size: 1.2rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 2.5rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1.1rem;
+        line-height: 1.6rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
         }
-    
-        &.bl {
-            left: $width / -2;
-            bottom: $height / -2;
-            transform: rotate(-135deg);
+    }
+}
+
+@media only screen and (max-width: 736px) and(max-height:414px){
+    .container{
+        overflow: hidden;
+    }
+    .star-sign-symbol {   
+        width: 15%;
+        margin: 35% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 1.0em 0;
+    }
+    .star-sign{
+        font-size: 1.2rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 1.7rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1.1rem;
+        line-height: 1.6rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
         }
-    
-        &.br {
-            right: $width / -2;
-            bottom: $height / -2;
-            transform: rotate(135deg);
+    }
+}
+@media only screen and (max-width: 375px) and (max-height: 667px){
+    .container{
+        overflow: hidden;
+    }
+    .star-sign-symbol {   
+        width: 30%;
+        margin: 40% auto 0 auto;    
+    }
+    .star-sign-name {
+        padding: 1.0em 0;
+    }
+    .star-sign{
+        font-size: 1.5rem; 
+        padding: 0 1em;
+    }  
+    .arrow { 
+        width: 1.8rem;
+        max-height: 5.5rem;
+    }
+    .horoscope-of-day{
+        width: 80%;
+        font-size: 1.2rem;
+        line-height: 1.5rem;
+
+        &:before{
+            top: 0.25em;
+            left: -0.15em;
+            font-size: 5.7em;          
         }
+    }
+       //////// LOAD COMPONENTS //////
+
+    .loading-title{
+        font-size:1.7em;
+    }
+    .loading-text{
+        font-size:1em;
+    }
+    .loading-about{
+        font-size: 1em;
     }
 }
